--- a/css/main.css
+++ b/css/main.css
@@ -26,26 +26,30 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link {
-  color: var(--sub-text-color);
-}
-
-.page-link {
-  color: var(--main-text-color);
-}
-
-.link:focus,
+.page-link:hover, .page-link:focus,
 .link:hover,
-.page-link:hover,
-.page-link:focus,
-.footer-link:hover,
-.footer-link:focus {
+.link:focus {
   color: var(--brand-color);
   opacity: 1;
 }
 
-.logo span {
-  color: var(--brand-color);
+.link {
+  color: var(--sub-text-color);
+  display: flex;
+  align-items: center;
+}
+
+.link .link-svg {
+  margin-right: 10px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover .link-svg, .link:focus .link-svg {
+  fill: var(--brand-color);
+}
+
+.page-link {
+  color: var(--main-text-color);
 }
 
 .logo {
@@ -54,6 +58,10 @@
   line-height: 1.19;
   font-weight: bold;
   letter-spacing: 0.03em;
+}
+
+.logo span {
+  color: var(--brand-color);
 }
 
 .header {
@@ -71,7 +79,7 @@
   position: relative;
 }
 
-.active-page::after {
+.active-page:after {
   content: "";
   background: var(--brand-color);
   border-radius: 2px;
@@ -81,21 +89,6 @@
   display: block;
   bottom: -32px;
   left: 0;
-}
-
-.link-svg {
-  margin-right: 10px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.link {
-  display: flex;
-  align-items: center;
-}
-
-.link:hover .link-svg,
-.link:focus .link-svg {
-  fill: var(--brand-color);
 }
 
 .svg-wrapper {
@@ -108,9 +101,12 @@
   border-radius: 4px;
 }
 
-.nav-row li:not(:last-child),
-.link-row li:not(:last-child) {
+.nav-row li:not(:last-child), .nav-row li:not(:last-child) {
   margin-right: 50px;
+}
+
+.link-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .advantages {
@@ -167,13 +163,11 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.customer-link:hover,
-.customer-link:focus {
+.customer-link:hover, .customer-link:focus {
   border-color: var(--brand-color);
 }
 
-.customer-link:hover .brand-icon,
-.customer-link:focus .brand-icon {
+.customer-link:hover .brand-icon, .customer-link:focus .brand-icon {
   fill: var(--brand-color);
 }
 
@@ -249,8 +243,7 @@
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:hover,
-.hero-button:focus,
+.hero-button:hover, .hero-button:focus,
 .popup-submit:hover,
 .popup-submit:focus,
 .mailing-button:hover,
@@ -282,13 +275,11 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icon-link:hover,
-.social-icon-link:focus {
+.social-icon-link:hover, .social-icon-link:focus {
   background-color: var(--brand-color);
 }
 
-.social-icon-link:hover .social-icon,
-.social-icon-link:focus .social-icon {
+.social-icon-link:hover .social-icon, .social-icon-link:focus .social-icon {
   fill: var(--white-color);
 }
 
@@ -356,17 +347,16 @@
   background: rgba(255, 255, 255, 0.1);
 }
 
+.footer-social-icon-link:hover, .footer-social-icon-link:focus {
+  background: var(--brand-color);
+}
+
 .footer-social-icon {
   fill: var(--white-color);
 }
 
 .footer-social-item:not(:last-child) {
   margin-right: 10px;
-}
-
-.footer-social-icon-link:hover,
-.footer-social-icon-link:focus {
-  background: var(--brand-color);
 }
 
 .footer-social-icons {
@@ -393,17 +383,19 @@
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.address {
-  color: var(--white-color);
+.footer-link:hover, .footer-link:focus {
+  color: var(--brand-color);
   opacity: 1;
 }
 
-.address-item:not(:last-child) {
-  margin-bottom: 9px;
+.address {
+  color: var(--white-color);
+  opacity: 1;
+  margin-top: 20px;
 }
 
-.address {
-  margin-top: 20px;
+.address .address-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .third-column {
@@ -467,8 +459,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-button:hover,
-.portfolio-button:focus {
+.portfolio-button:hover, .portfolio-button:focus {
   background-color: var(--brand-color);
   color: var(--white-color);
   box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -528,14 +519,12 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-card-link:hover .portfolio-card-overlay,
-.portfolio-card-link:focus .portfolio-card-overlay {
-  transform: translateY(-100%);
+.portfolio-card-link:hover, .portfolio-card-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio-card-link:hover,
-.portfolio-card-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+.portfolio-card-link:hover .portfolio-card-overlay, .portfolio-card-link:focus .portfolio-card-overlay {
+  transform: translateY(-100%);
 }
 
 .project-type {
@@ -555,12 +544,6 @@
   opacity: 1;
   visibility: visible;
   transition: opacity 250ms linear, visibility 500ms linear;
-}
-
-.is-hidden {
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
 }
 
 .modal {
@@ -592,15 +575,14 @@
   box-sizing: border-box;
 }
 
+.close-button:hover .close-inner, .close-button:focus .close-inner {
+  fill: var(--brand-color);
+}
+
 .close-inner {
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-button:hover .close-inner,
-.close-button:focus .close-inner {
-  fill: var(--brand-color);
 }
 
 .popup-form {
@@ -617,11 +599,6 @@
   color: var(--main-text-color);
 }
 
-input,
-textarea {
-  box-sizing: border-box;
-}
-
 .popup-label {
   font-size: 12px;
   line-height: 1.17;
@@ -635,6 +612,10 @@ textarea {
   padding: 11px 12px 11px 42px;
 }
 
+.popup-input:focus + .input-icon {
+  fill: var(--brand-color);
+}
+
 .popup-input:focus,
 .popup-textarea:focus,
 .mailing-input:focus {
@@ -646,15 +627,14 @@ textarea {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.popup-input:focus + .input-icon,
-.popup-textarea:focus + .input-icon {
-  fill: var(--brand-color);
-}
-
 .popup-textarea {
   padding: 12px 16px;
   height: 120px;
   resize: none;
+}
+
+.popup-textarea:focus + .input-icon {
+  fill: var(--brand-color);
 }
 
 .popup-textarea::placeholder {
@@ -729,8 +709,7 @@ textarea {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox:hover + .check-label::before,
-.checkbox:focus + .check-label::before {
+.checkbox:hover + .check-label::before, .checkbox:focus + .check-label::before {
   border-color: var(--brand-color);
 }
 
@@ -788,6 +767,17 @@ body {
 .space {
   align-items: center;
   justify-content: space-between;
+}
+
+input,
+textarea {
+  box-sizing: border-box;
+}
+
+.is-hidden {
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
 }
 
 img {
