--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -43,3 +43,13 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+input,
+textarea {
+  box-sizing: border-box;
+}
+.is-hidden {
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
