--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -12,17 +12,20 @@
 }
 .footer-social-icon-link {
   background: rgba(255, 255, 255, 0.1);
+  &:hover,
+  &:focus {
+  background: var(--brand-color);
+  }
 }
 .footer-social-icon {
   fill: var(--white-color);
 }
-.footer-social-item:not(:last-child) {
+.footer-social-item {
+  &:not(:last-child) {
   margin-right: 10px;
+  }
 }
-.footer-social-icon-link:hover,
-.footer-social-icon-link:focus {
-  background: var(--brand-color);
-}
+  
 .footer-social-icons {
   display: flex;
   align-items: center;
@@ -43,16 +46,22 @@
   letter-spacing: 0.03em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--brand-color);
+    opacity: 1;
+  }
 }
 .address {
   color: var(--white-color);
   opacity: 1;
-}
-.address-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-.address {
   margin-top: 20px;
+  .address-item {
+    &:not(:last-child) {
+    margin-bottom: 9px;
+    }
+  }
+    
 }
 
 .third-column {
