--- a/sass/components/_home-hero-section.scss
+++ b/sass/components/_home-hero-section.scss
@@ -39,12 +39,8 @@
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-button:hover,
-.hero-button:focus,
-.popup-submit:hover,
-.popup-submit:focus,
-.mailing-button:hover,
-.mailing-button:focus {
-  background: var(--button-hover);
+  &:hover,
+  &:focus {
+    background: var(--button-hover);
+  }
 }
