--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,11 +10,6 @@
   visibility: visible;
   transition: opacity 250ms linear, visibility 500ms linear;
 }
-.is-hidden {
-  pointer-events: none;
-  opacity: 0;
-  visibility: hidden;
-}
 .modal {
   position: absolute;
   top: 50%;
@@ -42,15 +37,17 @@
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
+  &:hover,
+  &:focus {
+    .close-inner {
+      fill: var(--brand-color);
+    }
+  }
 }
 .close-inner {
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.close-button:hover .close-inner,
-.close-button:focus .close-inner {
-  fill: var(--brand-color);
 }
 .popup-form {
   text-align: center;
@@ -64,10 +61,6 @@
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
-input,
-textarea {
-  box-sizing: border-box;
-}
 .popup-label {
   font-size: 12px;
   line-height: 1.17;
@@ -78,33 +71,35 @@ textarea {
 }
 .popup-input {
   padding: 11px 12px 11px 42px;
+  &:focus + .input-icon {
+    fill: var(--brand-color);
+  }
 }
-
-.popup-input:focus,
-.popup-textarea:focus,
-.mailing-input:focus {
-  outline: none;
-  border-color: var(--brand-color);
+.popup-input,
+.popup-textarea,
+.mailing-input {
+  &:focus {
+    outline: none;
+    border-color: var(--brand-color);
+  }
 }
 .input-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.popup-input:focus + .input-icon,
-.popup-textarea:focus + .input-icon {
-  fill: var(--brand-color);
 }
 .popup-textarea {
   padding: 12px 16px;
   height: 120px;
   resize: none;
-}
-.popup-textarea::placeholder {
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
-  color: rgba(117, 117, 117, 0.5);
-
-  color: rgba(117, 117, 117, 0.5);
+  &:focus + .input-icon {
+    fill: var(--brand-color);
+  }
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 .popup-input,
 .popup-textarea {
@@ -113,7 +108,6 @@ textarea {
   width: 100%;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .check-label {
   font-size: 14px;
   line-height: 1.7;
@@ -150,25 +144,34 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
+  &::before {
+    content: "";
+    border: 2px solid var(--main-text-color);
+    border-radius: 4px;
+    width: 16px;
+    height: 15px;
+    cursor: pointer;
+    bottom: 0;
+    margin-right: 7px;
+    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
-.check-label::before {
-  content: "";
-  border: 2px solid var(--main-text-color);
-  border-radius: 4px;
-  width: 16px;
-  height: 15px;
-  cursor: pointer;
-  bottom: 0;
-  margin-right: 7px;
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.checkbox:hover + .check-label::before,
-.checkbox:focus + .check-label::before {
-  border-color: var(--brand-color);
-}
-.checkbox:checked + .check-label::before {
-  background: var(--brand-color) url("../images/check-white.svg") center center
-    no-repeat;
-  border-color: var(--brand-color);
+.checkbox {
+  &:hover ,
+  &:focus {
+    + .check-label {
+      &::before {
+        border-color: var(--brand-color);
+      }
+    }
+  }
+  &:checked {
+    + .check-label {
+      &::before {
+        background: var(--brand-color) url("../images/check-white.svg") center center no-repeat;
+        border-color: var(--brand-color);
+      }
+    }
+  }
 }
