--- a/sass/components/_portfolio-main.scss
+++ b/sass/components/_portfolio-main.scss
@@ -4,8 +4,10 @@
   justify-content: center;
   margin-bottom: 50px;
 }
-.list-item:not(:last-child) {
-  margin-right: 8px;
+.list-item {
+  &:not(:last-child) {
+    margin-right: 8px;
+  }
 }
 .portfolio-button {
   font-weight: 500;
@@ -20,13 +22,13 @@
   transition-property: color, box-shadow, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-button:hover,
-.portfolio-button:focus {
-  background-color: var(--brand-color);
-  color: var(--white-color);
-  box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08),
+  &:hover,
+  &:focus {
+    background-color: var(--brand-color);
+    color: var(--white-color);
+    box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 .portfolio-row {
   margin-top: -30px;
@@ -74,15 +76,14 @@
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-card-link:hover .portfolio-card-overlay,
-.portfolio-card-link:focus .portfolio-card-overlay {
-  transform: translateY(-100%);
-}
-.portfolio-card-link:hover,
-.portfolio-card-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    .portfolio-card-overlay {
+      transform: translateY(-100%);
+    }
+  }
 }
 .project-type {
   font-size: 16px;
